// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleMenuViewToggle Collapsible Menu Context should disable menu item when isSelectable is false 1`] = `
<MenuItem
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isDisabled={true}
  isHighlighted={false}
  isInstructionsForUse={false}
  isSelectable={false}
  isSelected={false}
  isToggled={false}
  subMenuItems={[]}
  text="Testing"
/>
`;

exports[`CollapsibleMenuViewToggle Collapsible Menu Context should render a selectable menu item 1`] = `
<MenuItem
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isDisabled={false}
  isHighlighted={false}
  isInstructionsForUse={false}
  isSelectable={true}
  isSelected={false}
  isToggled={false}
  subMenuItems={[]}
  text="Testing"
/>
`;

exports[`CollapsibleMenuViewToggle Collapsible Menu Context should set isDisabled prop on menu item 1`] = `
<MenuItem
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isDisabled={true}
  isHighlighted={false}
  isInstructionsForUse={false}
  isSelectable={true}
  isSelected={false}
  isToggled={false}
  subMenuItems={[]}
  text="Testing"
/>
`;

exports[`CollapsibleMenuViewToggle Collapsible Menu Context should set selected prop on menu item 1`] = `
<MenuItem
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isDisabled={false}
  isHighlighted={false}
  isInstructionsForUse={false}
  isSelectable={true}
  isSelected={true}
  isToggled={false}
  subMenuItems={[]}
  text="Testing"
/>
`;

exports[`CollapsibleMenuViewToggle should disable checkbox when isSelectable is false 1`] = `
<div
  className="face-up-item"
>
  <Checkbox
    className="control is-disabled"
    defaultChecked={false}
    disabled={true}
    inputAttrs={{}}
    intl={
      {
        "defaultFormats": {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": {},
        "formatters": {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isInline={false}
    isLabelHidden={false}
    labelText="Testing"
    labelTextAttrs={{}}
    name={null}
    onChange={[Function]}
  />
</div>
`;

exports[`CollapsibleMenuViewToggle should merge custom props 1`] = `
<div
  className="face-up-item"
>
  <Checkbox
    className="control Testing"
    defaultChecked={false}
    disabled={false}
    inputAttrs={{}}
    intl={
      {
        "defaultFormats": {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": {},
        "formatters": {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isInline={false}
    isLabelHidden={false}
    labelText="Testing"
    labelTextAttrs={{}}
    name={null}
    onChange={[Function]}
  />
</div>
`;

exports[`CollapsibleMenuViewToggle should render a default component 1`] = `
<div
  className="face-up-item"
>
  <Checkbox
    className="control"
    defaultChecked={false}
    disabled={false}
    inputAttrs={{}}
    intl={
      {
        "defaultFormats": {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": {},
        "formatters": {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isInline={false}
    isLabelHidden={false}
    labelText="Testing"
    labelTextAttrs={{}}
    name={null}
    onChange={[Function]}
  />
</div>
`;

exports[`CollapsibleMenuViewToggle should set defaultChecked prop 1`] = `
<div
  className="face-up-item"
>
  <Checkbox
    className="control"
    defaultChecked={true}
    disabled={false}
    inputAttrs={{}}
    intl={
      {
        "defaultFormats": {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": {},
        "formatters": {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isInline={false}
    isLabelHidden={false}
    labelText="Testing"
    labelTextAttrs={{}}
    name={null}
    onChange={[Function]}
  />
</div>
`;

exports[`CollapsibleMenuViewToggle should set isDisabled prop 1`] = `
<div
  className="face-up-item"
>
  <Checkbox
    className="control is-disabled"
    defaultChecked={false}
    disabled={true}
    inputAttrs={{}}
    intl={
      {
        "defaultFormats": {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": {},
        "formatters": {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isInline={false}
    isLabelHidden={false}
    labelText="Testing"
    labelTextAttrs={{}}
    name={null}
    onChange={[Function]}
  />
</div>
`;
